--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                     <span class="audience-icon">🌱</span>
                     <div>
                         <strong>基礎鞏固：</strong><br>
-                        作文分數尚未達到 14 分的同學，建議<strong>整個模板套用</strong>（以老師給的分數為準）。
+                        作文分數尚未達到 14 分的同學，建議<strong>整個模板套用</strong>（以保羅給的分數為準）。
                     </div>
                 </li>
                 <li class="audience-item">
@@ -268,7 +268,7 @@
                 <div class="feature-card">
                     <span class="feature-icon">👆</span>
                     <div class="feature-title">互動式閱讀：單字卡</div>
-                    <div class="feature-desc">點擊單字即可顯示詳細解釋與例句，學習不中斷。</div>
+                    <div class="feature-desc">點擊單字即可顯示詳細解釋與例句</div>
                 </div>
                 <div class="feature-card">
                     <span class="feature-icon">📝</span>
@@ -288,12 +288,12 @@
                 <div class="feature-card">
                     <span class="feature-icon">☁️</span>
                     <div class="feature-title">雲端資源串聯</div>
-                    <div class="feature-desc">內建連結，可隨時查看更多套用此模板的優秀範文。</div>
+                    <div class="feature-desc">內建連結，可隨時查看更多套用此模板的範文。</div>
                 </div>
                 <div class="feature-card">
                     <span class="feature-icon">🤖</span>
                     <div class="feature-title">機器人示範</div>
-                    <div class="feature-desc">上傳您的題目，讓 AI 機器人親自示範如何套用模板寫給你看。</div>
+                    <div class="feature-desc">上傳任何題目，讓 AI 機器人親自示範如何套用模板寫給你看。</div>
                 </div>
             </div>
         </section>
