--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
 
     <header>
         <h1>萬用作文模板使用說明</h1>
-        <p>提升寫作能力的最佳輔助工具</p>
+        <p>提升作文分數的利器</p>
     </header>
 
     <div class="container">
@@ -249,7 +249,7 @@
                     <span class="audience-icon">🌱</span>
                     <div>
                         <strong>基礎鞏固：</strong><br>
-                        作文分數尚未達到 14 分的同學，建議<strong>整個模板套用</strong>（以保羅給的分數為準）。
+                        作文分數從未達到 14 分或以上的同學（以保羅給的分數為準），建議<strong>背熟整個模板，但可視題目需要自行修改</strong>。
                     </div>
                 </li>
                 <li class="audience-item">
@@ -293,7 +293,7 @@
                 <div class="feature-card">
                     <span class="feature-icon">🤖</span>
                     <div class="feature-title">機器人示範</div>
-                    <div class="feature-desc">上傳任何題目，讓 AI 機器人親自示範如何套用模板寫給你看。</div>
+                    <div class="feature-desc">上傳任何題目，讓 AI 機器人示範如何套用模板寫給你看。</div>
                 </div>
             </div>
         </section>
@@ -335,3 +335,4 @@
 
 </body>
 </html>
+
