--- a/index.html
+++ b/index.html
@@ -248,14 +248,14 @@
                 <li class="audience-item">
                     <span class="audience-icon">🌱</span>
                     <div>
-                        <strong>基礎鞏固：</strong><br>
+                        <strong>基礎級到中級：</strong><br>
                         作文分數從未達到 14 分或以上的同學（以保羅給的分數為準），建議<strong>背熟整個模板，但可視題目需要自行修改</strong>。
                     </div>
                 </li>
                 <li class="audience-item">
                     <span class="audience-icon">🚀</span>
                     <div>
-                        <strong>進階活用：</strong><br>
+                        <strong>中高級到高級：</strong><br>
                         程度較好的同學，可以選擇幾個優美句子背誦，或是記憶整體架構，再隨題目自行靈活運用。
                     </div>
                 </li>
@@ -293,7 +293,7 @@
                 <div class="feature-card">
                     <span class="feature-icon">🤖</span>
                     <div class="feature-title">機器人示範</div>
-                    <div class="feature-desc">上傳任何題目，讓 AI 機器人示範如何套用模板寫給你看。</div>
+                    <div class="feature-desc">上傳任何題目，讓機器人套用模板寫給你看。(限版本1)</div>
                 </div>
             </div>
         </section>
