--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                     <span class="audience-icon">🌱</span>
                     <div>
                         <strong>基礎級到中級：</strong><br>
-                        作文分數從未達到 14 分或以上的同學（以保羅給的分數為準），建議<strong>背熟整個模板，但可視題目需要自行修改</strong>。
+                        作文分數從未達到 14 分或以上的同學（以保羅給的分數為準），建議<strong>熟背任一篇範文，藉此熟悉模板，這樣上考場時自然可隨題意自行修改，游刃有餘</strong>。
                     </div>
                 </li>
                 <li class="audience-item">
